# churn-shield

./: README.md  docker-compose.yml  makefile
backend/: .env  database.db  pyproject.toml  settings.json
backend/app/: main.py
backend/app/api/: api_v1.py
backend/app/api/routes/: account.py  auth.py  dashboard.py  data.py  datasets.py  insights.py  ml.py  model.py  models.py  upload.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/data/18a9bf1f-e8e8-498c-8b23-273da2aedee4/models/: 7c626b30-bd08-4367-8966-9aa31cef2246.joblib
backend/app/db/: database.py
backend/app/models/: customer_model.py  datasets.py  datasets_model.py  metrics.py  metrics_model.py  models_model.py  user.py  user_model.py
backend/app/schemas/: dashboard_schema.py  dataset_insights_schema.py  insights_schema.py  model_insights_schema.py  predict_schema.py
backend/app/services/: churn_service.py  dashboard_service.py  dataset_insights_service.py  insights_service.py  model_insights_service.py  prediction_service.py  preprocessing.py  preprocessing_service.py  train.py  train_service.py  upload_service.py
backend/app/utils/: formatter.py  validator.py
backend/static/: index.html
backend/static/assets/: index-CMGeCRjK.css  index-CsTx5Bxm.js
backend/tests/: common.py  conftest.py  test_auth.py  test_data.py  test_datasets.py  test_ml.py  test_model.py  test_routes.py  test_services.py  test_upload.py
backend/tests/__pycache__/: conftest.cpython-312-pytest-9.0.2.pyc.5444  conftest.cpython-312-pytest-9.0.2.pyc.9048
frontend/: README.md  index.html  (+2 more)
(+84 files in other folders)
